// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Hue Given the api requests succeed should handle connect request: Render After Connect 1`] = `
<div
  className="section no-pad-bot"
>
  <div
    className="container"
  >
    <h1>
      Hello World!
    </h1>
    <p
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <span
        style={
          Object {
            "marginRight": "1rem",
            "textAlign": "justify",
          }
        }
      >
        Bridge IP detected: 192.168.1.10
      </span>
      <Button
        className=""
        disabled={false}
        onClick={[Function]}
        size="btn-small"
        style={
          Object {
            "display": "inline-block",
            "margin": 0,
            "width": "auto",
          }
        }
      >
        Re-scan
      </Button>
    </p>
    <Button
      className=""
      disabled={false}
      onClick={[Function]}
      size="btn-large"
      style={Object {}}
    >
      Get information about your home
    </Button>
  </div>
</div>
`;

exports[`Page Hue Given the api requests succeed should handle discover request: Render After Discover 1`] = `
<div
  className="section no-pad-bot"
>
  <div
    className="container"
  >
    <h1>
      Hello World!
    </h1>
    <p
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <span
        style={
          Object {
            "marginRight": "1rem",
            "textAlign": "justify",
          }
        }
      >
        Bridge IP detected: 192.168.1.10
      </span>
      <Button
        className=""
        disabled={false}
        onClick={[Function]}
        size="btn-small"
        style={
          Object {
            "display": "inline-block",
            "margin": 0,
            "width": "auto",
          }
        }
      >
        Re-scan
      </Button>
    </p>
    <Button
      className=""
      disabled={false}
      onClick={[Function]}
      size="btn-large"
      style={Object {}}
    >
      Connect
    </Button>
  </div>
</div>
`;

exports[`Page Hue Given the api requests succeed should handle info request 1`] = `
Array [
  "You have 3 rooms:",
  "You have 3 lights:",
]
`;

exports[`Page Hue Given the api requests succeed should handle info request: Render After Info Request 1`] = `
<div
  className="section no-pad-bot"
>
  <div
    className="container"
  >
    <h1>
      Hello World!
    </h1>
    <p
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <span
        style={
          Object {
            "marginRight": "1rem",
            "textAlign": "justify",
          }
        }
      >
        Bridge IP detected: 192.168.1.10
      </span>
      <Button
        className=""
        disabled={false}
        onClick={[Function]}
        size="btn-small"
        style={
          Object {
            "display": "inline-block",
            "margin": 0,
            "width": "auto",
          }
        }
      >
        Re-scan
      </Button>
    </p>
    <Button
      className=""
      disabled={false}
      onClick={[Function]}
      size="btn-large"
      style={Object {}}
    >
      Get information about your home
    </Button>
    <List
      elements={
        Array [
          "chambre",
          "salon",
          "salle de bain",
        ]
      }
      title="You have 3 rooms:"
    />
    <List
      elements={
        Array [
          "bedroom-main",
          "living-room-main",
          "bathroom-main",
        ]
      }
      title="You have 3 lights:"
    />
  </div>
</div>
`;

exports[`Page Hue Given the api requests succeed should render the information lists correctly when there is no element 1`] = `
Array [
  "You have 0 room",
  "You have 0 light",
]
`;

exports[`Page Hue Given the api requests succeed should render the information lists correctly when there is only one element 1`] = `
Array [
  "You have 1 room:",
  "You have 1 light:",
]
`;

exports[`Page Hue should render the page correctly on init 1`] = `
<div
  className="section no-pad-bot"
>
  <div
    className="container"
  >
    <Button
      className=""
      disabled={false}
      onClick={[Function]}
      size="btn-large"
      style={Object {}}
    >
      Scan Philips Hue System
    </Button>
  </div>
</div>
`;

exports[`Page Hue should render the page correctly with all props and state data 1`] = `
<div
  className="section no-pad-bot"
>
  <div
    className="container"
  >
    <h1>
      Hello World!
    </h1>
    <p
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <span
        style={
          Object {
            "marginRight": "1rem",
            "textAlign": "justify",
          }
        }
      >
        Bridge IP detected: 192.168.1.10
      </span>
      <Button
        className=""
        disabled={false}
        onClick={[Function]}
        size="btn-small"
        style={
          Object {
            "display": "inline-block",
            "margin": 0,
            "width": "auto",
          }
        }
      >
        Re-scan
      </Button>
    </p>
    <Button
      className=""
      disabled={false}
      onClick={[Function]}
      size="btn-large"
      style={Object {}}
    >
      Get information about your home
    </Button>
    <List
      elements={
        Array [
          "chambre",
          "salon",
          "salle de bain",
        ]
      }
      title="You have 3 rooms:"
    />
    <List
      elements={
        Array [
          "bedroom-main",
          "living-room-main",
          "bathroom-main",
        ]
      }
      title="You have 3 lights:"
    />
  </div>
</div>
`;
